--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/node": "^9.2.0",
-    "@astrojs/react": "^4.2.4",
+    "@astrojs/node": "9.2.1",
+    "@astrojs/react": "4.2.7",
     "@radix-ui/react-avatar": "^1.1.6",
     "@radix-ui/react-checkbox": "^1.1.5",
     "@radix-ui/react-dropdown-menu": "^2.1.10",
@@ -22,7 +22,7 @@
     "@tailwindcss/vite": "^4.1.4",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
-    "astro": "^5.7.2",
+    "astro": "5.7.10",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
