--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.11.0",
     "lucide-react": "^0.509.0",
     "react": "^19.1.0",
     "react-colorful": "^5.6.1",
     "react-day-picker": "8.10.1",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
+    "react-resizable-panels": "^3.0.2",
     "react-router-dom": "^7.6.0",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.4",
