--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/node": "9.2.2",
     "@astrojs/react": "4.3.0",
+    "@astrojs/vercel": "^8.2.0",
     "@radix-ui/react-accordion": "^1.2.8",
     "@radix-ui/react-avatar": "^1.1.6",
     "@radix-ui/react-checkbox": "^1.1.5",
