--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@astrojs/react": "4.3.0",
     "@astrojs/vercel": "^8.2.0",
+    "@fontsource-variable/inter": "^5.2.6",
     "@radix-ui/react-accordion": "^1.2.8",
     "@radix-ui/react-avatar": "^1.1.6",
     "@radix-ui/react-checkbox": "^1.1.5",
